TODO

customizable alpha/color/size/etc for mouseovered/selected geoms. One
way to do this is by defining new *.hover aesthetics,
e.g. https://github.com/rstudio/ggvis/blob/master/demo/hover.r

theme(legend.position)

specify scale_x_continuous(LABEL) instead of xlab(LABEL).

facets -- to implement these it may be useful to use "margin
convention" http://bl.ocks.org/mbostock/3019563

coord_equal

aes(tooltip=text) for specifying the text to show when you hover the
mouse over something, e.g. #1.

layout=matrix of plot names means render plots in an html table
instead of in a line.

Include SEVERAL d3 plots directly in knitr html output e.g.
http://zvfak.blogspot.jp/2013/08/using-javascript-visualization.html

multiple selection? ex, if 1 bin contains multiple values of
clickSelects, then can we select all of the corresponding geoms? This
would require rewriting a substantial amount of JS code, so let's just
ignore this for the time being.

specify id or key variable for transitions? In the current set of
examples, using keys has proven un-necessary. So let's just ignore
this for now.  http://bost.ocks.org/mike/constancy/

Figure out when two csv files are the same and if so only write one of
them?

2013.11.19

draw colored, sized "a" in legend for geom_text.

geom_text(aes(size)) is resized using e.g. <text font-size="10">

2013.11.15

Bugfix: filter NaN before passing data to lineThing to avoid hiding an
entire line if only one element is NA.

2013.10.23

Include 1 animint in a knitr Rmd document when processed in the same
directory.

Generate documentation example web site.

Bugfix for geom_point(colour=constant).

2013.10.15

Hide only y axis and not x axis if axis.text.y=element_blank(), etc.

2013.10.4

Bugfixes for geom_ribbon(aes(fill=variable)) and
geom_text(aes(color=variable)).

2013.9.26

Update R/JS comments from emails to Susan.

gg2animint examples are animated and interactive.

2013.8.29