@@ -1,5 +1,8 @@
 TODO
 
+some bug with specifying manual breaks with size scale on
+scatterplots?
+
 customizable alpha/color/size/etc for mouseovered/selected geoms. One
 way to do this is by defining new *.hover aesthetics,
 e.g. https://github.com/rstudio/ggvis/blob/master/demo/hover.r
